# ballerz

./: package-lock.json  package.json  pyproject.toml  tembo.toml
prisma/: schema.prisma
src/backend/: paths.py
src/backend/base/: baseball.ipynb  ufc.ipynb
src/backend/config/: base.py
src/backend/core/: config.py
src/backend/data/: data_ingest.py  test.ipynb
src/backend/data/mlb/: mlb_data.py  people.parquet  roster.parquet  savant_scraper.py  teams.parquet
src/backend/data/mlb/raw/: allstar_full.csv.zst  appearances.csv.zst  awards_managers.csv.zst  awards_players.csv.zst  awards_share_managers.csv.zst  awards_share_players.csv.zst  batting.csv.zst  batting_post.csv.zst  college_playing.csv.zst  fielding.csv.zst  fielding_of.csv.zst  fielding_of_split.csv.zst  fielding_post.csv.zst  hall_of_fame.csv.zst  home_games.csv.zst  managers.csv.zst  managers_half.csv.zst  parks.csv.zst  people.csv.zst  pitching.csv.zst  pitching_post.csv.zst  salaries.csv.zst  schools.csv.zst  series_post.csv.zst  teams.csv.zst  teams_franchises.csv.zst  teams_half.csv.zst
src/backend/data/ncaafb/: cfb.py
src/backend/data/ufc/: regex_parse.py
src/backend/db/: connector.py  database.py
src/backend/models/: base.py  documents_model.py
src/backend/scrapers/csgo/: csgo_player_scrapper.py
src/backend/sql/: sport.session.sql
src/backend/utils/: file_helpers.py  timezone.py  utilities.py  zst_helper.py
