[project]
name = "backend"
version = "0.1.0"
description = "backend for the ballerz project"
authors = [
    {name = "joshua.sturm", email = ""},
]
dependencies = [
    "polars>=0.20.23",
    "MLB-StatsAPI>=1.7.1",
    "sqlalchemy>=2.0.29",
    "fastapi>=0.110.2",
    "pydantic-core>=2.18.2",
    "pydantic-settings>=2.2.1",
    "pandas>=2.2.2",
    "pybaseball>=2.2.7",
    "matplotlib>=3.8.4",
    "pyarrow>=16.0.0",
    "scrapy>=2.11.1",
    "bs4>=0.0.2",
    "tqdm>=4.66.2",
    "sportsdataverse>=0.0.38",
    "zstandard>=0.22.0",
]
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
