[project]
name = "backend"
version = "0.1.0"
description = "backend for the ballerz project"
authors = [
    {name = "joshua.sturm", email = ""},
]
dependencies = [
    "polars>=0.20.23",
    "MLB-StatsAPI>=1.7.1",
    "sqlalchemy>=2.0.29",
    "fastapi>=0.110.2",
    "pydantic-core>=2.18.2",
    "pydantic-settings>=2.2.1",
    "pandas>=2.2.2",
    "pybaseball>=2.2.7",
    "matplotlib>=3.8.4",
    "pyarrow>=16.0.0",
    "scrapy>=2.11.1",
    "bs4>=0.0.2",
    "tqdm>=4.66.4",
    "sportsdataverse>=0.0.38",
    "zstandard>=0.22.0",
    "prisma>=0.13.1",
    "pydantic[email]>=2.7.1",
    "psycopg2-binary>=2.9.9",
    "loguru>=0.7.2",
    "jupyterlab>=4.2.0",
    "pyspark>=3.5.1",
    "asyncpg>=0.29.0",
    "sqlalchemy-cockroachdb>=2.0.2",
    "litestar>=2.8.3",
    "redis>=5.0.4",
    "alembic>=1.13.1",
]
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
